--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "less": "^4.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
