--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-pro-sidebar": "^1.0.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
