--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/node": "^16.18.2",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "axios": "^1.2.4",
     "bootstrap": "^5.2.2",
+    "jwt-decode": "^3.1.2",
     "less": "^4.1.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
