--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.2",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/react-notifications-component": "^3.1.1",
     "axios": "^1.2.4",
     "bootstrap": "^5.2.2",
     "jwt-decode": "^3.1.2",
@@ -19,9 +20,10 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-notifications": "^1.7.4",
     "react-pro-sidebar": "^1.0.0",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^6.4.2",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
