--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react-icons": "^4.7.1",
     "react-notifications": "^1.7.4",
     "react-pro-sidebar": "^1.0.0",
+    "react-read-more-read-less": "^1.0.7",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "read-more-react": "^1.0.10",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
