--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@types/react-notifications-component": "^3.1.1",
+    "@types/react-textfit": "^1.1.0",
     "axios": "^1.2.4",
     "bootstrap": "^5.2.2",
     "jwt-decode": "^3.1.2",
